--- a/app/index.css
+++ b/app/index.css
@@ -120,3 +120,15 @@ a{
     text-decoration: none;
 }
 
+.reset{
+    border: none;
+    background: transparent;
+    color: #d0021b;
+    display: block;
+    width: 100%;
+    text-align: center;
+}
+
+.reset:hover{
+    cursor: pointer;
+}
